--- a/admin-starter/pom.xml
+++ b/admin-starter/pom.xml
@@ -16,6 +16,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/chart.js -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>chart.js</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
